Migrated to Java 21 recipe changed get(0) and get(size-1) to use getFirst/getLast.